--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
     "@angular/common": "~13.3.11",
     "@angular/compiler": "~13.3.11",
     "@angular/core": "~13.3.11",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.3.11",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "firebase": "9.9.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.11",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
