--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
+    "@angular/animations": "~16.2.11",
+    "@angular/cdk": "^16.2.10",
+    "@angular/common": "~16.2.11",
+    "@angular/compiler": "~16.2.11",
+    "@angular/core": "~16.2.11",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "~13.3.11",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/forms": "~16.2.11",
+    "@angular/material": "^16.2.10",
+    "@angular/platform-browser": "~16.2.11",
+    "@angular/platform-browser-dynamic": "~16.2.11",
+    "@angular/router": "~16.2.11",
     "firebase": "9.9.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
-    "zone.js": "^0.11.8"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
-    "@angular/cli": "~13.3.8",
-    "@angular/compiler-cli": "~13.3.11",
+    "@angular-devkit/build-angular": "^16.2.8",
+    "@angular/cli": "^16.2.8",
+    "@angular/compiler-cli": "~16.2.11",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
@@ -38,6 +38,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   }
 }
