--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "firebase": "9.9.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.8",
@@ -38,6 +38,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.9.5"
+    "typescript": "^5.2.2"
   }
 }
